--- a/introduce/index.html
+++ b/introduce/index.html
@@ -5,7 +5,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-  <script src="greet.js"></script>
 </head>
 
 <body>
@@ -19,7 +18,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="page1.html">Портфолио</a>
+            <a class="nav-link" aria-current="page" href="page1.html">Портфолио</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="page2.html">Price</a>
@@ -36,8 +35,8 @@
     <!-- <img src="./photo/p1.jpg" class="card-img-top "> -->
     <img src="./photo/png1.jpg" class="object-fit-cover border rounded card-image">
     <div class="card-body">
-      <h5 class="card-title">Ермакова Арина, Томск/Новосибирск</h5>
-      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+      <h5 class="card-title">Ермакова Арина</h5>
+      <p class="card-text"><small class="text-body-secondary">Томск/Новосибирск</small></p>
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
