--- a/introduce/page1.html
+++ b/introduce/page1.html
@@ -1,34 +1,121 @@
 <!doctype html>
 <html>
 
-  <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="greet.css">
-    <script src="greet.js"></script>
-  </head>
+<head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <script src="greet.js"></script>
+</head>
 
-  <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">Главная страница</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="page1.html">Портфолио</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="page2.html">Price</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="page3.html">О себе</a>
-        </li>
-      </ul>
+<body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">Главная страница</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="page1.html">Портфолио</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page2.html">Price</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page3.html">О себе</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div>
+    <div id="carouselExampleCaptions" class="carousel slide slider">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+          aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+          aria-label="Slide 5"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5"
+          aria-label="Slide 6"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6"
+          aria-label="Slide 7"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="7"
+          aria-label="Slide 8"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./photo/page1_1/1.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Смотрит</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./photo/page1_1/2.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Пёс и человечки</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./photo/page1_1/3.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Пёсы</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./photo/page1_1/4.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Пёс и бег</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./photo/page1_1/5.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Пилатес</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./photo/page1_1/6.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Руководители</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./photo/page1_1/7.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Улыбается</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./photo/page1_1/8.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Стоит</h5>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
   </div>
-</nav>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
+    integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
+    crossorigin="anonymous"></script>
+</body>
 
 </html>
