--- a/introduce/page3.html
+++ b/introduce/page3.html
@@ -1,34 +1,36 @@
 <!doctype html>
 <html>
 
-  <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="greet.css">
-    <script src="greet.js"></script>
-  </head>
+<head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <script src="greet.js"></script>
+</head>
 
-  <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">Главная страница</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="page1.html">Портфолио</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="page2.html">Price</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="page3.html">О себе</a>
-        </li>
-      </ul>
+<body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">Главная страница</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="page1.html">Портфолио</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page2.html">Price</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="page3.html">О себе</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
-  </body>
+  </nav>
+</body>
 
 </html>
