--- a/introduce/page2.html
+++ b/introduce/page2.html
@@ -51,7 +51,7 @@
           Срок изготовления — 5 дней;</br>
           Студия оплачивается отдельно.</br>
           Исходники предоставляются для выбора фотографий, который пойдут в обработку</p>
-        <a href="#" class="btn btn-primary">Написать</a>
+        <a href="https://web.telegram.org/a/#1362758919" class="btn btn-primary">Написать</a>
       </div>
     </div>
 
@@ -70,7 +70,7 @@
           Художественная ретушь — 30 шт;</br>
           Срок изготовления — 5 дней;</br>
           Исходники предоставляются для выбора фотографий, который пойдут в обработку</p>
-        <a href="#" class="btn btn-primary">Написать</a>
+        <a href="https://web.telegram.org/a/#1362758919" class="btn btn-primary">Написать</a>
       </div>
     </div>
 
@@ -87,7 +87,7 @@
           Авторская обработка фотографий — 30-45 шт. За каждые следующие 15 фото — 1500р к прайсу;</br>
           Легкая ретушь при необходимости;</br>
           Срок изготовления — 7 дней.</p>
-        <a href="#" class="btn btn-primary">Написать</a>
+        <a href="https://web.telegram.org/a/#1362758919" class="btn btn-primary">Написать</a>
       </div>
     </div>
   </div>
