--- a/introduce/page3.html
+++ b/introduce/page3.html
@@ -9,28 +9,47 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">Главная страница</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="page1.html">Портфолио</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="page2.html">Price</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="page3.html">О себе</a>
-          </li>
-        </ul>
+  <div>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">Главная страница</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="page1.html">Портфолио</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="page2.html">Price</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="page3.html">О себе</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
+  </div>
+  <div style="text-align: center; margin: 40px;">
+    <h3>Философия работы</h3></br>
+    <h5>Считаю, что портретная фотография — это не постановочная фотосессия на протяжении оплаченного часа
+      фотографа.</br>
+      Это зеркало героя, навсегда запечатлевшие атмосферу дня, настроение и состояние души.</br>
+      Именно поэтому я пришла к стилю, который считаю идеальным для портрета.</br>
+      Мой стиль – это микс «чистого фото» без «тяжелой» ретуши, неестественных поз и тривиальных локаций и репортажа —
+      бэкстейджа.</h6>
+       
+      <h5>Портретная фотография — это про гармонию с самим собой.</br>
+        Настоящая магия на фотографиях случается тогда, когда герой готов обнажить душу, снять маски, забыв о камерах и
+        удачных ракурсах. </h6> 
+         
+        <h5>Если вы искренне наслаждаетесь своим днем и собой, не стесняетесь быть открытым и настоящим, то фотографии
+          буду
+          100% прекрасные.</h6>
+  </div>
 </body>
 
 </html>
