--- a/page2.html
+++ b/page2.html
@@ -36,7 +36,7 @@
 
   <div style="display: flex; justify-content: center;">
     <div class="card" style="width: 18rem; margin: 20px;">
-      <img src="./photo/price1.jpg" class="card-img-top" style="size: 20px;">
+      <img src="price1.jpg" class="card-img-top" style="size: 20px;">
       <div class="card-body">
         <h5 class="card-title">Портрет - 4000 руб.</h5>
         <p class="card-text">Бронь места и запись осуществляется только по предоплате (20%); </br>
@@ -56,7 +56,7 @@
     </div>
 
     <div class="card" style="width: 18rem; margin: 20px;">
-      <img src="./photo/price3.jpg" class="card-img-top" alt="...">
+      <img src="price3.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Прогулочная - 5000 руб.</h5>
         <p class="card-text">Бронь места и запись осуществляется только по предоплате (20%);</br>
@@ -75,7 +75,7 @@
     </div>
 
     <div class="card" style="width: 18rem; margin: 20px;">
-      <img src="./photo/price2.jpg" class="card-img-top" alt="...">
+      <img src="price2.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Репортаж - 5500 руб.</h5>
         <p class="card-text">Бронь места и запись осуществляется только по предоплате (20%);</br>
