--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
   </nav>
   <div class="card mb-3">
-    <img src="./photo/png1.jpg" class="object-fit-cover border rounded card-image">
+    <img src="png1.jpg" class="object-fit-cover border rounded card-image">
     <div class="card-body" style="text-align: center;">
       <h5 class="card-text">Тут медиавбросы, бестолковое кокетство и псевдоюмор</h5>
       <a href="https://t.me/allervaller">
