--- a/page1.html
+++ b/page1.html
@@ -53,49 +53,49 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./photo/page1_1/1.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
+          <img src="1.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Смотрит</h5>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./photo/page1_1/2.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
+          <img src="2.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Пёс и человечки</h5>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./photo/page1_1/3.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
+          <img src="3.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Пёсы</h5>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./photo/page1_1/4.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
+          <img src="4.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Пёс и бег</h5>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./photo/page1_1/5.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
+          <img src="5.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Пилатес</h5>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./photo/page1_1/6.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
+          <img src="6.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Руководители</h5>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./photo/page1_1/7.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
+          <img src="7.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Улыбается</h5>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./photo/page1_1/8.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
+          <img src="8.jpg" class="object-fit-cover d-block w-100 h-100 slider" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Стоит</h5>
           </div>
